<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tablelogin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <Switch
                    android:id="@+id/swcCheDoToi"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtViTien"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/Ví_Tiền"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/ic_wallet"
                app:drawableTint="@color/orangeA200" />

            <RelativeLayout
                android:id="@+id/rlLoaiTienTe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/Loại_tiền_tệ"
                    app:drawableStartCompat="@drawable/ic_coin"
                    app:drawableTint="@color/orangeA200"  />

                <TextView
                    android:id="@+id/txtLoaiTienTe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="VNĐ"
                    android:textColor="@color/orangeA200"
                    app:drawableTint="@color/orangeA200" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtDanhMuc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_line"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/Danh_mục"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/ic_danhmuc"
                app:drawableTint="@color/orangeA200"  />

            <TextView
                android:id="@+id/txtDanhGia"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_line"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/Đánh_giá"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/ic_danhmuc"
                app:drawableTint="@color/orangeA200"

                />
            <TextView
                android:id="@+id/txtPhanhoi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_line"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/Phản_hồi"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/ic_danhmuc"
                app:drawableTint="@color/orangeA200"  />

            <TextView
                android:id="@+id/txtNhacNho"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_line"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/Nhắc_nhở"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/ic_danhmuc"
                app:drawableTint="@color/orangeA200"  />


            <TextView
                android:id="@+id/txtDangxuat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/Đăng_xuất"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/ic_lienhe"
                app:drawableTint="@color/orangeA200"  />
            <TextView
                android:id="@+id/txtProfile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="Profile"
                app:drawableEndCompat="@drawable/ic_right"
                app:drawableStartCompat="@drawable/profile"
                app:drawableTint="@color/orangeA200"  />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>