<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DanhGiaActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#FFCE3B"
                />

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="-75dp"
                android:background="@drawable/stroke_dialog"
                android:padding="20dp"
                >


                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/white_dialog"/>


                <ImageView
                    android:id="@+id/ImageRating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:padding="25dp"
                    android:src="@drawable/three_star" />



            </RelativeLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mời_bạn_đánh_giá"
                android:layout_marginTop="10dp"
                android:textColor="#CC000000"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:text="@string/Vui_lòng_đánh_giá_ứng_dụng_của_chúng_tôi_đánh_giá_của_các_bạn_là_động_lực_để_chúng_tôi_phát_triển_ứng_dụng_này_tốt_hơn."
                />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:rating="3"
                android:theme ="@style/MyRatingBar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLater"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/Để_lần_sau"
                    android:textAllCaps="false"
                    android:textColor="#CC000000"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/later_button_background"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRate"
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/Gửi"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:background="@drawable/rate_button_background"/>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>